--- a/css/style.css
+++ b/css/style.css
@@ -133,28 +133,122 @@ table {
   border-spacing: 0;
 }
 
+.m-ls {
+  margin-left: 8px;
+}
+
+.m-rs {
+  margin-right: 8px;
+}
+
+.m-lrs {
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
+* {
+  outline: 1px solid #555;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+.header,
+.footer {
+  font-family: "Helvetica Neue", Helvetica, arial, freesans, clean, sans-serif;
+}
+
 .section {
   outline: 1px solid aqua;
+  display: flex;
+}
+
+.container {
+  padding: 0 20px;
+  max-width: 445px;
+  margin: 0 auto;
+  display: flex;
+  flex: 1;
+}
+@media (min-width: 900px) {
+  .container {
+    max-width: 854px;
+  }
+}
+
+.container-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(50px, auto);
+  gap: 20px;
+}
+@media (min-width: 900px) {
+  .container-grid {
+    grid-template-columns: repeat(8, 1fr);
+  }
 }
 
 .header {
-  height: 43px;
+  height: 63px;
   background-color: #584b4f;
+  font-size: 14px;
+}
+@media (min-width: 900px) {
+  .header {
+    height: 43px;
+  }
+}
+.header .header__container {
+  justify-content: center;
+}
+@media (min-width: 900px) {
+  .header .header__container {
+    justify-content: space-between;
+  }
+}
+.header .header__navbar {
+  display: flex;
+  align-items: center;
+}
+.header .header__navbar a {
+  color: #dad4cc;
+  text-decoration: none;
+}
+.header .header__navbar a:hover {
+  color: #81c08b;
+}
+.header .header__sign-in {
+  display: flex;
+}
+.header .header__sign-in a {
+  color: #dad4cc;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+.header .header__sign-in a:hover {
+  color: #81c08b;
+}
+.header .header__sign-in img {
+  width: 13px;
+  height: 16px;
 }
 
 .hero {
-  height: 988px;
   background-color: #353435;
 }
 
 .main {
-  height: 100vh;
   background-color: #353435;
 }
 
 .contact {
-  height: 804px;
   background-color: #2c2a2b;
+}
+
+.footer {
+  background-color: #efeae1;
 }
 
 /*# sourceMappingURL=style.css.map */
