--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -6,6 +6,7 @@ $hc-header: #81c08b;
 $c-letter: #efdab9;
 $c-letter-dark: #676057;
 $c-letter-link: #766d62;
+$c-letter-black: #353435;
 
 $c-primary: #ffd152;
 $hc-primary: #fac31f;
@@ -23,7 +24,7 @@ $bgc-contact: #2c2a2b;
 $bgc-footer: #efeae1;
 
 // Others
-$bc-light: #444143;
+$c-border: #444143;
 
 //* Site
 $fz-attention: 12px;
@@ -34,3 +35,12 @@ $fz-heading-4: 19px;
 $fz-heading-3: 22px;
 $fz-heading-2: 32px;
 $fz-heading-1: 36px;
+
+$lh-header: 1.3;
+$lh-paragraph: 1.3;
+
+$letter-space-1: 0.3rem;
+$radius-1: 8px;
+$radius-2: 16px;
+
+$bold: 600;
