--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -1,13 +1,128 @@
 //* Spacing
-$small: 8px;
-.m-ls {
-  margin-left: $small;
+$space-1: 8px;
+$space-2: 16px;
+$space-3: 24px;
+
+//* Margin
+// space 1
+.ml-1 {
+  margin-left: $space-1;
 }
-.m-rs {
-  margin-right: $small;
+.mr-1 {
+  margin-right: $space-1;
+}
+.mt-1 {
+  margin-top: $space-1;
+}
+.mb-1 {
+  margin-bottom: $space-1;
+}
+.mx-1 {
+  margin-left: $space-1;
+  margin-right: $space-1;
+}
+.my-1 {
+  margin-top: $space-1;
+  margin-bottom: $space-1;
 }
 
-.m-lrs {
-  margin-left: $small;
-  margin-right: $small;
+// space 2
+.ml-2 {
+  margin-left: $space-2;
+}
+.mr-2 {
+  margin-right: $space-2;
+}
+.mt-2 {
+  margin-top: $space-2;
+}
+.mb-2 {
+  margin-bottom: $space-2;
+}
+.mx-2 {
+  margin-left: $space-2;
+  margin-right: $space-2;
+}
+.my-2 {
+  margin-top: $space-2;
+  margin-bottom: $space-2;
+}
+.m-2 {
+  margin: $space-2;
+}
+
+// space 3
+.ml-3 {
+  margin-left: $space-3;
+}
+.mr-3 {
+  margin-right: $space-3;
+}
+.mt-3 {
+  margin-top: $space-3;
+}
+.mb-3 {
+  margin-bottom: $space-3;
+}
+.mx-3 {
+  margin-left: $space-3;
+  margin-right: $space-3;
+}
+.my-3 {
+  margin-top: $space-3;
+  margin-bottom: $space-3;
+}
+
+.m-3 {
+  margin: $space-3;
+}
+//* Padding
+// space 2
+.pr-2 {
+  padding-right: $space-2;
+}
+.pl-2 {
+  padding-left: $space-2;
+}
+.pt-2 {
+  padding-top: $space-2;
+}
+.pb-2 {
+  padding-bottom: $space-2;
+}
+.px-2 {
+  padding-left: $space-2;
+  padding-right: $space-2;
+}
+.py-2 {
+  padding-top: $space-2;
+  padding-bottom: $space-2;
+}
+.p-2 {
+  padding: $space-2;
+}
+
+// space 3
+.pr-3 {
+  padding-right: $space-3;
+}
+.pl-3 {
+  padding-left: $space-3;
+}
+.pt-3 {
+  padding-top: $space-3;
+}
+.pb-3 {
+  padding-bottom: $space-3;
+}
+.px-3 {
+  padding-left: $space-3;
+  padding-right: $space-3;
+}
+.py-3 {
+  padding-top: $space-3;
+  padding-bottom: $space-3;
+}
+.p-3 {
+  padding: $space-3;
 }
