--- a/css/style.css
+++ b/css/style.css
@@ -133,21 +133,150 @@ table {
   border-spacing: 0;
 }
 
-.m-ls {
+.ml-1 {
   margin-left: 8px;
 }
 
-.m-rs {
+.mr-1 {
   margin-right: 8px;
 }
 
-.m-lrs {
+.mt-1 {
+  margin-top: 8px;
+}
+
+.mb-1 {
+  margin-bottom: 8px;
+}
+
+.mx-1 {
   margin-left: 8px;
   margin-right: 8px;
 }
 
-* {
-  outline: 1px solid #555;
+.my-1 {
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+.ml-2 {
+  margin-left: 16px;
+}
+
+.mr-2 {
+  margin-right: 16px;
+}
+
+.mt-2 {
+  margin-top: 16px;
+}
+
+.mb-2 {
+  margin-bottom: 16px;
+}
+
+.mx-2 {
+  margin-left: 16px;
+  margin-right: 16px;
+}
+
+.my-2 {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.m-2 {
+  margin: 16px;
+}
+
+.ml-3 {
+  margin-left: 24px;
+}
+
+.mr-3 {
+  margin-right: 24px;
+}
+
+.mt-3 {
+  margin-top: 24px;
+}
+
+.mb-3 {
+  margin-bottom: 24px;
+}
+
+.mx-3 {
+  margin-left: 24px;
+  margin-right: 24px;
+}
+
+.my-3 {
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+
+.m-3 {
+  margin: 24px;
+}
+
+.pr-2 {
+  padding-right: 16px;
+}
+
+.pl-2 {
+  padding-left: 16px;
+}
+
+.pt-2 {
+  padding-top: 16px;
+}
+
+.pb-2 {
+  padding-bottom: 16px;
+}
+
+.px-2 {
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+.py-2 {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+.p-2 {
+  padding: 16px;
+}
+
+.pr-3 {
+  padding-right: 24px;
+}
+
+.pl-3 {
+  padding-left: 24px;
+}
+
+.pt-3 {
+  padding-top: 24px;
+}
+
+.pb-3 {
+  padding-bottom: 24px;
+}
+
+.px-3 {
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.py-3 {
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.p-3 {
+  padding: 24px;
 }
 
 body {
@@ -160,7 +289,6 @@ body {
 }
 
 .section {
-  outline: 1px solid aqua;
   display: flex;
 }
 
@@ -181,7 +309,6 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: minmax(50px, auto);
-  gap: 20px;
 }
 @media (min-width: 900px) {
   .container-grid {
@@ -237,6 +364,135 @@ body {
 
 .hero {
   background-color: #353435;
+}
+.hero .hero__container {
+  grid-template-areas: ". . . ." ". . . ." "header header header header" ". . . ." "main main main main" "footer footer footer footer";
+}
+@media screen and (min-width: 900px) {
+  .hero .hero__container {
+    grid-template-areas: ". . . . . . . ." ". . . . . . . ." "header header header header header header header header" ". . . . . . . ." "main main main main main main main main" "footer footer footer footer footer footer footer footer";
+  }
+}
+@media screen and (min-width: 1100px) {
+  .hero .hero__container {
+    grid-template-areas: ". . . . . . . ." ". . . . . . . ." "header header header header header main main main" "header header header header header main main main" "footer footer footer footer footer footer footer footer";
+  }
+}
+@media screen and (min-width: 100px) and (min-height: 1000px) {
+  .hero .hero__container {
+    grid-template-areas: ". . . . . . . ." ". . . . . . . ." "header header header header header header header header" ". . . . . . . ." "main main main main main main main main" "footer footer footer footer footer footer footer footer";
+  }
+}
+.hero .hero__header {
+  grid-area: header;
+  height: 360px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.hero .hero__header .atom-circles {
+  position: absolute;
+}
+.hero .hero__header .atom-circles img {
+  transform: translate(-50%, -50%);
+  position: absolute;
+}
+.hero .hero__header .atom-blue {
+  position: absolute;
+  transform: translate(-280px, -100px);
+}
+.hero .hero__main {
+  grid-area: main;
+  display: flex;
+  justify-content: center;
+}
+.hero .hero__main ul {
+  border-radius: 16px;
+  border: 1px solid #444143;
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 1100px) and (min-height: 1000px) {
+  .hero .hero__main ul {
+    flex-direction: row;
+  }
+}
+.hero .hero__main ul li {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.hero .hero__main ul li + li {
+  border-top: 1px solid #444143;
+}
+@media screen and (min-width: 1100px) and (min-height: 1000px) {
+  .hero .hero__main ul li + li {
+    border-top: initial;
+    border-left: 1px solid #444143;
+  }
+}
+.hero .hero__main .hero__note {
+  align-items: center;
+}
+.hero .hero__main .hero__note h3 {
+  font-size: 22px;
+  color: #efdab9;
+  line-height: 1.3;
+}
+.hero .hero__main .hero__note p {
+  color: #676057;
+  font-size: 14px;
+  line-height: 1.3;
+}
+.hero .hero__main .hero__note a {
+  color: #766d62;
+  text-decoration: none;
+}
+.hero .hero__main .hero__note a:hover {
+  color: #fac31f;
+}
+.hero .hero__main .hero__note--release h3 {
+  letter-spacing: 0.3rem;
+}
+.hero .hero__main .download a {
+  background-color: #ffd152;
+  color: #353435;
+  border-radius: 8px;
+  text-decoration: none;
+  display: flex;
+  font-weight: 600;
+}
+.hero .hero__main .download a:hover {
+  background-color: #fac31f;
+}
+.hero .hero__footer {
+  grid-area: footer;
+  display: grid;
+  justify-content: center;
+}
+.hero .hero__footer > p {
+  line-height: 1.3;
+  color: #676057;
+}
+.hero .hero__footer > p a {
+  color: #766d62;
+  text-decoration: none;
+}
+.hero .hero__footer > p a:hover {
+  color: #fac31f;
+}
+.hero .hero__footer > ul {
+  display: flex;
+  justify-content: space-between;
+}
+.hero .hero__footer > ul a {
+  line-height: 1.3;
+  color: #766d62;
+  text-decoration: none;
+}
+.hero .hero__footer > ul a:hover {
+  color: #fac31f;
 }
 
 .main {
