Refactor mixin by usign sass syntax

--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -18,12 +18,19 @@ $space-3: 24px;
   margin-bottom: $space-1;
 }
 .mx-1 {
-  margin-left: $space-1;
-  margin-right: $space-1;
+  margin: {
+    left: $space-1;
+    right: $space-1;
+  }
 }
 .my-1 {
-  margin-top: $space-1;
-  margin-bottom: $space-1;
+  margin: {
+    top: $space-1;
+    bottom: $space-1;
+  }
+}
+.m-1 {
+  margin: $space-1;
 }
 
 // space 2
@@ -40,12 +47,16 @@ $space-3: 24px;
   margin-bottom: $space-2;
 }
 .mx-2 {
-  margin-left: $space-2;
-  margin-right: $space-2;
+  margin: {
+    left: $space-2;
+    right: $space-2;
+  }
 }
 .my-2 {
-  margin-top: $space-2;
-  margin-bottom: $space-2;
+  margin: {
+    top: $space-2;
+    bottom: $space-2;
+  }
 }
 .m-2 {
   margin: $space-2;
@@ -65,12 +76,16 @@ $space-3: 24px;
   margin-bottom: $space-3;
 }
 .mx-3 {
-  margin-left: $space-3;
-  margin-right: $space-3;
+  margin: {
+    left: $space-3;
+    right: $space-3;
+  }
 }
 .my-3 {
-  margin-top: $space-3;
-  margin-bottom: $space-3;
+  margin: {
+    top: $space-3;
+    bottom: $space-3;
+  }
 }
 
 .m-3 {
@@ -91,12 +106,16 @@ $space-3: 24px;
   padding-bottom: $space-2;
 }
 .px-2 {
-  padding-left: $space-2;
-  padding-right: $space-2;
+  padding: {
+    left: $space-2;
+    right: $space-2;
+  }
 }
 .py-2 {
-  padding-top: $space-2;
-  padding-bottom: $space-2;
+  padding: {
+    top: $space-2;
+    bottom: $space-2;
+  }
 }
 .p-2 {
   padding: $space-2;
@@ -116,12 +135,16 @@ $space-3: 24px;
   padding-bottom: $space-3;
 }
 .px-3 {
-  padding-left: $space-3;
-  padding-right: $space-3;
+  padding: {
+    left: $space-3;
+    right: $space-3;
+  }
 }
 .py-3 {
-  padding-top: $space-3;
-  padding-bottom: $space-3;
+  padding: {
+    top: $space-3;
+    bottom: $space-3;
+  }
 }
 .p-3 {
   padding: $space-3;
