--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,175 @@ table {
   padding: 24px;
 }
 
+.btn {
+  padding: 8px 16px;
+  color: #353435;
+  text-decoration: none;
+  border-radius: 8px;
+  font-weight: 600;
+  line-height: 1.5;
+}
+
+.btn-primary {
+  background-color: #ffd152;
+}
+.btn-primary:hover {
+  background-color: #fac31f;
+}
+
+.btn-secondary {
+  background-color: #61efce;
+}
+.btn-secondary:hover {
+  background-color: #45edc6;
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-15px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.rings .ring {
+  animation-name: rotate;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.rings img:nth-child(1) {
+  animation-duration: 33s;
+}
+
+.rings img:nth-child(2) {
+  animation-duration: 36s;
+}
+
+.rings img:nth-child(3) {
+  animation-duration: 39s;
+}
+
+.rings img:nth-child(4) {
+  animation-duration: 42s;
+}
+
+.rings img:nth-child(5) {
+  animation-duration: 45s;
+}
+
+.rings img:nth-child(6) {
+  animation-duration: 48s;
+}
+
+.rings img:nth-child(7) {
+  animation-duration: 51s;
+}
+
+.rings img:nth-child(8) {
+  animation-duration: 53s;
+}
+
+.rings img:nth-child(9) {
+  animation-duration: 57s;
+}
+
+.rings img:nth-child(10) {
+  animation-duration: 60s;
+}
+
+.atom-blue img {
+  animation-name: float;
+  animation-duration: 4s;
+  animation-timeing-function: ease-in-out;
+  animation-iteration-count: infinite;
+}
+
+.atom-circles img:nth-child(1) {
+  animation-name: rotate;
+  animation-duration: 33s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.atom-circles img:nth-child(2) {
+  animation-name: rotate;
+  animation-duration: 36s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.atom-circles img:nth-child(3) {
+  animation-name: rotate;
+  animation-duration: 39s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.atom-circles img:nth-child(4) {
+  animation-name: rotate;
+  animation-duration: 42s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.atom-circles img:nth-child(5) {
+  animation-name: rotate;
+  animation-duration: 45s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.atom-circles img:nth-child(6) {
+  animation-name: rotate;
+  animation-duration: 48s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.atom-circles img:nth-child(7) {
+  animation-name: rotate;
+  animation-duration: 51s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.atom-circles img:nth-child(8) {
+  animation-name: rotate;
+  animation-duration: 54s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.atom-circles img:nth-child(9) {
+  animation-name: rotate;
+  animation-duration: 57s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.atom-circles img:nth-child(10) {
+  animation-name: rotate;
+  animation-duration: 60s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+* {
+  outline: 1px solid #555;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
@@ -297,16 +466,10 @@ body {
 }
 
 .container {
-  padding: 0 20px;
-  max-width: 445px;
+  padding: 0 30px;
   margin: 0 auto;
   display: flex;
   flex: 1;
-}
-@media (min-width: 900px) {
-  .container {
-    max-width: 854px;
-  }
 }
 
 .container-grid {
@@ -330,38 +493,43 @@ body {
     height: 43px;
   }
 }
-.header .header__container {
+
+.header__container {
+  max-width: 445px;
   justify-content: center;
 }
 @media (min-width: 900px) {
-  .header .header__container {
+  .header__container {
+    max-width: 854px;
     justify-content: space-between;
   }
 }
-.header .header__navbar {
+
+.header__navbar {
   display: flex;
   align-items: center;
 }
-.header .header__navbar a {
+.header__navbar a {
   color: #dad4cc;
   text-decoration: none;
 }
-.header .header__navbar a:hover {
+.header__navbar a:hover {
   color: #81c08b;
 }
-.header .header__sign-in {
+
+.header__sign-in {
   display: flex;
 }
-.header .header__sign-in a {
+.header__sign-in a {
   color: #dad4cc;
   text-decoration: none;
   display: flex;
   align-items: center;
 }
-.header .header__sign-in a:hover {
+.header__sign-in a:hover {
   color: #81c08b;
 }
-.header .header__sign-in img {
+.header__sign-in img {
   width: 13px;
   height: 16px;
 }
@@ -369,25 +537,28 @@ body {
 .hero {
   background-color: #353435;
 }
-.hero .hero__container {
+
+.hero__container {
   grid-template-areas: ". . . ." ". . . ." "header header header header" ". . . ." "main main main main" "footer footer footer footer";
 }
 @media screen and (min-width: 900px) {
-  .hero .hero__container {
+  .hero__container {
+    max-width: 854px;
     grid-template-areas: ". . . . . . . ." ". . . . . . . ." "header header header header header header header header" ". . . . . . . ." "main main main main main main main main" "footer footer footer footer footer footer footer footer";
   }
 }
 @media screen and (min-width: 1100px) {
-  .hero .hero__container {
+  .hero__container {
     grid-template-areas: ". . . . . . . ." ". . . . . . . ." "header header header header header main main main" "header header header header header main main main" "footer footer footer footer footer footer footer footer";
   }
 }
 @media screen and (min-width: 100px) and (min-height: 1000px) {
-  .hero .hero__container {
+  .hero__container {
     grid-template-areas: ". . . . . . . ." ". . . . . . . ." "header header header header header header header header" ". . . . . . . ." "main main main main main main main main" "footer footer footer footer footer footer footer footer";
   }
 }
-.hero .hero__header {
+
+.hero__header {
   grid-area: header;
   height: 360px;
   display: flex;
@@ -395,71 +566,86 @@ body {
   align-items: center;
   position: relative;
 }
-.hero .hero__header .atom-circles {
+
+.atom-circles {
   position: absolute;
+  transform: translate(-183px, -183px);
 }
-.hero .hero__header .atom-circles img {
-  transform: translate(-50%, -50%);
+.atom-circles img {
   position: absolute;
+  width: 366px;
+  height: 366px;
 }
-.hero .hero__header .atom-blue {
+
+.atom-blue {
   position: absolute;
   transform: translate(-280px, -100px);
+  display: none;
 }
-.hero .hero__main {
+@media screen and (min-width: 660px) {
+  .atom-blue {
+    display: block;
+  }
+}
+
+.hero__main {
   grid-area: main;
   display: flex;
   justify-content: center;
 }
-.hero .hero__main ul {
+
+.hero__version {
   border-radius: 16px;
   border: 1px solid #444143;
   display: flex;
   flex-direction: column;
 }
 @media screen and (min-width: 1100px) and (min-height: 1000px) {
-  .hero .hero__main ul {
+  .hero__version {
     flex-direction: row;
   }
 }
-.hero .hero__main ul li {
+.hero__version li {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.hero .hero__main ul li + li {
+.hero__version li + li {
   border-top: 1px solid #444143;
 }
 @media screen and (min-width: 1100px) and (min-height: 1000px) {
-  .hero .hero__main ul li + li {
+  .hero__version li + li {
     border-top: initial;
     border-left: 1px solid #444143;
   }
 }
-.hero .hero__main .hero__note {
+
+.hero__note {
   align-items: center;
 }
-.hero .hero__main .hero__note h3 {
+.hero__note h3 {
   font-size: 22px;
   color: #efdab9;
   line-height: 1.3;
 }
-.hero .hero__main .hero__note p {
+.hero__note p {
   color: #676057;
   font-size: 14px;
-  line-height: 1.3;
+  line-height: 1.5;
 }
-.hero .hero__main .hero__note a {
+.hero__note a {
   color: #766d62;
   text-decoration: none;
 }
-.hero .hero__main .hero__note a:hover {
+.hero__note a:hover {
   color: #fac31f;
 }
-.hero .hero__main .hero__note--release h3 {
+
+.hero__note--release h3 {
   letter-spacing: 0.3rem;
 }
-.hero .hero__main .download a {
+
+.download a {
   background-color: #ffd152;
   color: #353435;
   border-radius: 8px;
@@ -467,40 +653,188 @@ body {
   display: flex;
   font-weight: 600;
 }
-.hero .hero__main .download a:hover {
+.download a:hover {
   background-color: #fac31f;
 }
-.hero .hero__footer {
+
+.hero__footer {
   grid-area: footer;
   display: grid;
   justify-content: center;
 }
-.hero .hero__footer > p {
-  line-height: 1.3;
+
+.hero__term {
+  line-height: 1.5;
   color: #676057;
 }
-.hero .hero__footer > p a {
+.hero__term a {
   color: #766d62;
   text-decoration: none;
 }
-.hero .hero__footer > p a:hover {
+.hero__term a:hover {
   color: #fac31f;
 }
-.hero .hero__footer > ul {
+
+.hero__other-version {
   display: flex;
   justify-content: space-between;
 }
-.hero .hero__footer > ul a {
-  line-height: 1.3;
+.hero__other-version a {
+  line-height: 1.5;
   color: #766d62;
   text-decoration: none;
 }
-.hero .hero__footer > ul a:hover {
+.hero__other-version a:hover {
   color: #fac31f;
 }
 
 .main {
   background-color: #353435;
+  overflow: hidden;
+}
+
+.main__container {
+  max-width: 580px;
+  grid-template-areas: ". . . ." ". . . ." ". . . ." "header header header header" ". . . ." ". . . ." ". . . ." "content-1 content-1 content-1 content-1" ". . . ." ". . . ." ". . . ." "content-2 content-2 content-2 content-2";
+}
+@media (min-width: 900px) {
+  .main__container {
+    grid-template-areas: ". . . . . . . ." ". . . . . . . ." ". . . . . . . ." "header header header header header header header header" ". . . . . . . ." ". . . . . . . ." ". . . . . . . ." "content-1 content-1 content-1 content-1 content-1 content-1 content-1 content-1" ". . . . . . . ." ". . . . . . . ." ". . . . . . . ." "content-2 content-2 content-2 content-2 content-2 content-2 content-2 content-2" ". . . . . . . ." ". . . . . . . .";
+  }
+}
+@media (min-width: 1100px) {
+  .main__container {
+    max-width: 854px;
+  }
+}
+
+.main__header {
+  grid-area: header;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.main__header h1 {
+  color: #efdab9;
+  font-size: 36px;
+  font-weight: 300;
+  line-height: 1.3;
+}
+.main__header h1 span {
+  color: #78b0a0;
+}
+
+.main__content {
+  position: relative;
+  padding: 0 20px;
+  display: grid;
+  row-gap: 40px;
+  column-gap: 60px;
+  grid-auto-rows: minmax(20px, auto);
+  grid-template-areas: "title" "first-paragraph" "example" "second-paragraph" "button";
+}
+.main__content.main__content--left {
+  grid-area: content-1;
+}
+@media screen and (min-width: 1100px) {
+  .main__content.main__content--left {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: ". example" "title example" "first-paragraph example" "second-paragraph example" "button example" ". example";
+  }
+}
+.main__content.main__content--right {
+  grid-area: content-2;
+}
+@media screen and (min-width: 1100px) {
+  .main__content.main__content--right {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: "example ." "example title" "example first-paragraph" "example second-paragraph" "example button" "example .";
+  }
+}
+
+.rainbow {
+  position: absolute;
+  right: 90%;
+}
+@media screen and (min-width: 1100px) {
+  .rainbow {
+    top: -5%;
+    right: 115%;
+  }
+}
+
+.atom-orange {
+  position: absolute;
+  left: 90%;
+  top: -15%;
+}
+.main__title {
+  grid-area: title;
+  font-size: 32px;
+  color: #efdab9;
+  line-height: 1.3;
+  font-weight: 300;
+}
+
+.main__first-paragraph {
+  grid-area: first-paragraph;
+  font-size: 16px;
+  color: #efdab9;
+  line-height: 1.5;
+}
+
+.main__example {
+  grid-area: example;
+  position: relative;
+  transition: all 1s ease;
+}
+.main__example img {
+  width: 100%;
+}
+@media screen and (min-width: 1100px) {
+  .main__example img {
+    position: absolute;
+    width: initial;
+    height: 488px;
+  }
+}
+.main__example.main__example--left {
+  filter: brightness(0.75) contrast(1) sepia(0.7) hue-rotate(-5deg) saturate(3.5);
+}
+.main__example.main__example--left:hover {
+  filter: none;
+}
+.main__example.main__example--left img {
+  left: 0;
+}
+.main__example.main__example--right {
+  filter: brightness(0.7) contrast(1) sepia(1) hue-rotate(115deg) saturate(1.5);
+}
+.main__example.main__example--right:hover {
+  filter: none;
+}
+.main__example.main__example--right img {
+  right: 0;
+}
+
+.main__second-paragraph {
+  grid-area: second-paragraph;
+  font-size: 16px;
+  color: #efdab9;
+  line-height: 1.5;
+}
+.main__second-paragraph a {
+  color: #ffd152;
+  text-decoration: none;
+}
+.main__second-paragraph a:hover {
+  color: #fac31f;
+}
+
+.main__button {
+  grid-area: button;
+  display: flex;
 }
 
 .contact {
