--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -37,10 +37,11 @@ $fz-heading-2: 32px;
 $fz-heading-1: 36px;
 
 $lh-header: 1.3;
-$lh-paragraph: 1.3;
+$lh-paragraph: 1.5;
 
 $letter-space-1: 0.3rem;
 $radius-1: 8px;
 $radius-2: 16px;
 
-$bold: 600;
+$fw-light: 300;
+$fw-bold: 600;
