--- a/css/_structure.scss
+++ b/css/_structure.scss
@@ -2,7 +2,7 @@
 
 ////////////////////////? GENERAL ?////////////////////////
 * {
-  outline: 1px solid #555;
+  // outline: 1px solid #555;
 }
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
@@ -87,10 +87,7 @@ body {
 
 .hero__container {
   grid-template-areas:
-    ". . . ."
-    ". . . ."
     "header header header header"
-    ". . . ."
     "main main main main"
     "footer footer footer footer";
 
@@ -98,27 +95,19 @@ body {
     max-width: 854px;
 
     grid-template-areas:
-      ". . . . . . . ."
-      ". . . . . . . ."
       "header header header header header header header header"
-      ". . . . . . . ."
       "main main main main main main main main"
       "footer footer footer footer footer footer footer footer";
   }
   @media screen and (min-width: 1100px) {
     grid-template-areas:
-      ". . . . . . . ."
-      ". . . . . . . ."
       "header header header header header main main main"
       "header header header header header main main main"
       "footer footer footer footer footer footer footer footer";
   }
   @media screen and (min-width: 100px) and (min-height: 1000px) {
     grid-template-areas:
-      ". . . . . . . ."
-      ". . . . . . . ."
       "header header header header header header header header"
-      ". . . . . . . ."
       "main main main main main main main main"
       "footer footer footer footer footer footer footer footer";
   }
@@ -264,34 +253,14 @@ body {
 .main__container {
   max-width: 580px;
   grid-template-areas:
-    ". . . ."
-    ". . . ."
-    ". . . ."
     "header header header header"
-    ". . . ."
-    ". . . ."
-    ". . . ."
     "content-1 content-1 content-1 content-1"
-    ". . . ."
-    ". . . ."
-    ". . . ."
     "content-2 content-2 content-2 content-2";
   @media (min-width: 900px) {
     grid-template-areas:
-      ". . . . . . . ."
-      ". . . . . . . ."
-      ". . . . . . . ."
       "header header header header header header header header"
-      ". . . . . . . ."
-      ". . . . . . . ."
-      ". . . . . . . ."
       "content-1 content-1 content-1 content-1 content-1 content-1 content-1 content-1"
-      ". . . . . . . ."
-      ". . . . . . . ."
-      ". . . . . . . ."
-      "content-2 content-2 content-2 content-2 content-2 content-2 content-2 content-2"
-      ". . . . . . . ."
-      ". . . . . . . .";
+      "content-2 content-2 content-2 content-2 content-2 content-2 content-2 content-2";
   }
   @media (min-width: 1100px) {
     max-width: 854px;
