--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,33 @@ table {
   margin: 24px;
 }
 
+.mt-s-sec {
+  margin-top: 50px;
+}
+
+.my-s-sec {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.mt-m-sec {
+  margin-top: 100px;
+}
+
+.my-m-sec {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.mt-l-sec {
+  margin-top: 150px;
+}
+
+.my-l-sec {
+  margin-top: 150px;
+  margin-bottom: 150px;
+}
+
 .pr-2 {
   padding-right: 16px;
 }
@@ -448,10 +475,6 @@ table {
   animation-iteration-count: infinite;
 }
 
-* {
-  outline: 1px solid #555;
-}
-
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
@@ -539,22 +562,22 @@ body {
 }
 
 .hero__container {
-  grid-template-areas: ". . . ." ". . . ." "header header header header" ". . . ." "main main main main" "footer footer footer footer";
+  grid-template-areas: "header header header header" "main main main main" "footer footer footer footer";
 }
 @media screen and (min-width: 900px) {
   .hero__container {
     max-width: 854px;
-    grid-template-areas: ". . . . . . . ." ". . . . . . . ." "header header header header header header header header" ". . . . . . . ." "main main main main main main main main" "footer footer footer footer footer footer footer footer";
+    grid-template-areas: "header header header header header header header header" "main main main main main main main main" "footer footer footer footer footer footer footer footer";
   }
 }
 @media screen and (min-width: 1100px) {
   .hero__container {
-    grid-template-areas: ". . . . . . . ." ". . . . . . . ." "header header header header header main main main" "header header header header header main main main" "footer footer footer footer footer footer footer footer";
+    grid-template-areas: "header header header header header main main main" "header header header header header main main main" "footer footer footer footer footer footer footer footer";
   }
 }
 @media screen and (min-width: 100px) and (min-height: 1000px) {
   .hero__container {
-    grid-template-areas: ". . . . . . . ." ". . . . . . . ." "header header header header header header header header" ". . . . . . . ." "main main main main main main main main" "footer footer footer footer footer footer footer footer";
+    grid-template-areas: "header header header header header header header header" "main main main main main main main main" "footer footer footer footer footer footer footer footer";
   }
 }
 
@@ -695,11 +718,11 @@ body {
 
 .main__container {
   max-width: 580px;
-  grid-template-areas: ". . . ." ". . . ." ". . . ." "header header header header" ". . . ." ". . . ." ". . . ." "content-1 content-1 content-1 content-1" ". . . ." ". . . ." ". . . ." "content-2 content-2 content-2 content-2";
+  grid-template-areas: "header header header header" "content-1 content-1 content-1 content-1" "content-2 content-2 content-2 content-2";
 }
 @media (min-width: 900px) {
   .main__container {
-    grid-template-areas: ". . . . . . . ." ". . . . . . . ." ". . . . . . . ." "header header header header header header header header" ". . . . . . . ." ". . . . . . . ." ". . . . . . . ." "content-1 content-1 content-1 content-1 content-1 content-1 content-1 content-1" ". . . . . . . ." ". . . . . . . ." ". . . . . . . ." "content-2 content-2 content-2 content-2 content-2 content-2 content-2 content-2" ". . . . . . . ." ". . . . . . . .";
+    grid-template-areas: "header header header header header header header header" "content-1 content-1 content-1 content-1 content-1 content-1 content-1 content-1" "content-2 content-2 content-2 content-2 content-2 content-2 content-2 content-2";
   }
 }
 @media (min-width: 1100px) {
