--- a/css/_structure.scss
+++ b/css/_structure.scss
@@ -2,7 +2,7 @@
 
 ////////////////////////? GENERAL ?////////////////////////
 * {
-  // outline: 1px solid #555;
+  outline: 1px solid #555;
 }
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
@@ -251,23 +251,13 @@ body {
   overflow: hidden;
 }
 .main__container {
+  flex-direction: column;
   max-width: 580px;
-  grid-template-areas:
-    "header header header header"
-    "content-1 content-1 content-1 content-1"
-    "content-2 content-2 content-2 content-2";
-  @media (min-width: 900px) {
-    grid-template-areas:
-      "header header header header header header header header"
-      "content-1 content-1 content-1 content-1 content-1 content-1 content-1 content-1"
-      "content-2 content-2 content-2 content-2 content-2 content-2 content-2 content-2";
-  }
   @media (min-width: 1100px) {
     max-width: 854px;
   }
 }
 .main__header {
-  grid-area: header;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -296,7 +286,6 @@ body {
     "second-paragraph"
     "button";
   &.main__content--left {
-    grid-area: content-1;
     @media screen and (min-width: 1100px) {
       grid-template-columns: repeat(2, 1fr);
       grid-template-areas:
@@ -309,7 +298,6 @@ body {
     }
   }
   &.main__content--right {
-    grid-area: content-2;
     @media screen and (min-width: 1100px) {
       grid-template-columns: repeat(2, 1fr);
       grid-template-areas:
@@ -406,6 +394,63 @@ body {
 .main__button {
   grid-area: button;
   display: flex;
+}
+////////////* MAIN FEATURE *////////////
+.main__feature {
+  h2 {
+    font-size: $fz-heading-2;
+    color: $c-letter;
+    line-height: $lh-header;
+    font-weight: $fw-light;
+  }
+}
+
+.main__lists {
+  display: grid;
+  gap: 50px;
+  @media (min-width: 1100px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  li {
+    display: flex;
+  }
+}
+.main__icon {
+  align-self: start;
+  background-color: #3d3a3a;
+  border-radius: $radius-1;
+  img {
+    width: 24px;
+    height: 21px;
+  }
+}
+.main__explanation {
+  h4 {
+    font-size: $fz-heading-4;
+    color: $c-letter;
+    line-height: $lh-header;
+    font-weight: $fw-bold;
+  }
+  p {
+    font-size: $fz-body;
+    color: $c-letter;
+    line-height: $lh-paragraph;
+    a {
+      color: $c-primary;
+      text-decoration: none;
+      &:hover {
+        color: $hc-primary;
+      }
+    }
+  }
+  > a {
+    display: inline-block;
+    color: $c-primary;
+    text-decoration: none;
+    &:hover {
+      color: $hc-primary;
+    }
+  }
 }
 
 ////////////////////////? CONTACT ?////////////////////////
