--- a/css/style.css
+++ b/css/style.css
@@ -227,6 +227,10 @@ table {
   margin-top: 50px;
 }
 
+.mb-s-sec {
+  margin-bottom: 50px;
+}
+
 .my-s-sec {
   margin-top: 50px;
   margin-bottom: 50px;
@@ -234,6 +238,10 @@ table {
 
 .mt-m-sec {
   margin-top: 100px;
+}
+
+.mb-m-sec {
+  margin-bottom: 100px;
 }
 
 .my-m-sec {
@@ -245,9 +253,43 @@ table {
   margin-top: 150px;
 }
 
+.mb-l-sec {
+  margin-bottom: 150px;
+}
+
 .my-l-sec {
   margin-top: 150px;
   margin-bottom: 150px;
+}
+
+.pr-1 {
+  padding-right: 8px;
+}
+
+.pl-1 {
+  padding-left: 8px;
+}
+
+.pt-1 {
+  padding-top: 8px;
+}
+
+.pb-1 {
+  padding-bottom: 8px;
+}
+
+.px-1 {
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+.py-1 {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.p-1 {
+  padding: 8px;
 }
 
 .pr-2 {
@@ -473,6 +515,10 @@ table {
   animation-duration: 60s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
+}
+
+* {
+  outline: 1px solid #555;
 }
 
 body {
@@ -717,13 +763,8 @@ body {
 }
 
 .main__container {
+  flex-direction: column;
   max-width: 580px;
-  grid-template-areas: "header header header header" "content-1 content-1 content-1 content-1" "content-2 content-2 content-2 content-2";
-}
-@media (min-width: 900px) {
-  .main__container {
-    grid-template-areas: "header header header header header header header header" "content-1 content-1 content-1 content-1 content-1 content-1 content-1 content-1" "content-2 content-2 content-2 content-2 content-2 content-2 content-2 content-2";
-  }
 }
 @media (min-width: 1100px) {
   .main__container {
@@ -732,7 +773,6 @@ body {
 }
 
 .main__header {
-  grid-area: header;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -741,7 +781,7 @@ body {
 .main__header h1 {
   color: #efdab9;
   font-size: 36px;
-  font-weight: 300;
+  font-weight: 200;
   line-height: 1.3;
 }
 .main__header h1 span {
@@ -757,17 +797,11 @@ body {
   grid-auto-rows: minmax(20px, auto);
   grid-template-areas: "title" "first-paragraph" "example" "second-paragraph" "button";
 }
-.main__content.main__content--left {
-  grid-area: content-1;
-}
 @media screen and (min-width: 1100px) {
   .main__content.main__content--left {
     grid-template-columns: repeat(2, 1fr);
     grid-template-areas: ". example" "title example" "first-paragraph example" "second-paragraph example" "button example" ". example";
   }
-}
-.main__content.main__content--right {
-  grid-area: content-2;
 }
 @media screen and (min-width: 1100px) {
   .main__content.main__content--right {
@@ -797,7 +831,7 @@ body {
   font-size: 32px;
   color: #efdab9;
   line-height: 1.3;
-  font-weight: 300;
+  font-weight: 200;
 }
 
 .main__first-paragraph {
@@ -858,6 +892,63 @@ body {
 .main__button {
   grid-area: button;
   display: flex;
+}
+
+.main__feature h2 {
+  font-size: 32px;
+  color: #efdab9;
+  line-height: 1.3;
+  font-weight: 200;
+}
+
+.main__lists {
+  display: grid;
+  gap: 50px;
+}
+@media (min-width: 1100px) {
+  .main__lists {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+.main__lists li {
+  display: flex;
+}
+
+.main__icon {
+  align-self: start;
+  background-color: #3d3a3a;
+  border-radius: 8px;
+}
+.main__icon img {
+  width: 24px;
+  height: 21px;
+}
+
+.main__explanation h4 {
+  font-size: 19px;
+  color: #efdab9;
+  line-height: 1.3;
+  font-weight: 600;
+}
+.main__explanation p {
+  font-size: 16px;
+  color: #efdab9;
+  line-height: 1.5;
+}
+.main__explanation p a {
+  color: #ffd152;
+  text-decoration: none;
+}
+.main__explanation p a:hover {
+  color: #fac31f;
+}
+.main__explanation > a {
+  display: inline-block;
+  color: #ffd152;
+  text-decoration: none;
+}
+.main__explanation > a:hover {
+  color: #fac31f;
 }
 
 .contact {
