--- a/css/style.css
+++ b/css/style.css
@@ -375,6 +375,14 @@ table {
   background-color: #45edc6;
 }
 
+.link {
+  color: #ffd152;
+  text-decoration: none;
+}
+.link:hover {
+  color: #fac31f;
+}
+
 @keyframes float {
   0% {
     transform: translateY(0);
@@ -515,10 +523,6 @@ table {
   animation-duration: 60s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
-}
-
-* {
-  outline: 1px solid #555;
 }
 
 body {
@@ -881,13 +885,6 @@ body {
   color: #efdab9;
   line-height: 1.5;
 }
-.main__second-paragraph a {
-  color: #ffd152;
-  text-decoration: none;
-}
-.main__second-paragraph a:hover {
-  color: #fac31f;
-}
 
 .main__button {
   grid-area: button;
@@ -935,13 +932,6 @@ body {
   color: #efdab9;
   line-height: 1.5;
 }
-.main__explanation p a {
-  color: #ffd152;
-  text-decoration: none;
-}
-.main__explanation p a:hover {
-  color: #fac31f;
-}
 .main__explanation > a {
   display: inline-block;
   color: #ffd152;
@@ -953,6 +943,64 @@ body {
 
 .contact {
   background-color: #2c2a2b;
+}
+
+.contact__container {
+  display: grid;
+  gap: 50px;
+  max-width: 580px;
+}
+@media (min-width: 1100px) {
+  .contact__container {
+    max-width: 854px;
+  }
+}
+@media (min-width: 1100px) {
+  .contact__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+.contact__container h2 {
+  font-size: 32px;
+  line-height: 1.3;
+  color: #efdab9;
+  font-weight: 200;
+}
+
+.contact__github p {
+  color: #efdab9;
+  line-height: 1.5;
+}
+
+.contact__button {
+  display: flex;
+}
+
+.contact__sns {
+  position: relative;
+}
+
+.rocket {
+  position: absolute;
+  top: -50%;
+  left: 50%;
+  display: none;
+}
+@media screen and (min-width: 660px) {
+  .rocket {
+    display: block;
+  }
+}
+
+.contact__lists li {
+  display: flex;
+  align-items: center;
+}
+.contact__lists li p {
+  color: #efdab9;
+  font-size: 16px;
+  line-height: 1.5;
+  flex-basis: 100px;
 }
 
 .footer {
