--- a/css/_structure.scss
+++ b/css/_structure.scss
@@ -2,7 +2,7 @@
 
 ////////////////////////? GENERAL ?////////////////////////
 * {
-  // outline: 1px solid #555;
+  outline: 1px solid #555;
 }
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
@@ -147,6 +147,10 @@ body {
   grid-area: main;
   display: flex;
   justify-content: center;
+  margin-top: 50px;
+  @media screen and (min-width: 1100px) and (max-height: 1000px) {
+    margin-top: 150px;
+  }
 }
 
 .hero__version {
@@ -390,6 +394,7 @@ body {
 }
 ////////////* MAIN FEATURE *////////////
 .main__feature {
+  padding: 0 20px;
   h2 {
     font-size: $fz-heading-2;
     color: $c-letter;
@@ -442,8 +447,10 @@ body {
 ////////////////////////? CONTACT ?////////////////////////
 .contact {
   background-color: $bgc-contact;
+  overflow: hidden;
 }
 .contact__container {
+  padding: 100px 0;
   display: grid;
   gap: 50px;
   max-width: 580px;
@@ -451,6 +458,7 @@ body {
     max-width: 854px;
   }
   @media (min-width: 1100px) {
+    padding: 200px 0;
     grid-template-columns: repeat(2, 1fr);
   }
   h2 {
@@ -462,6 +470,7 @@ body {
 }
 
 .contact__github {
+  padding: 0 20px;
   p {
     color: $c-letter;
     line-height: $lh-paragraph;
@@ -472,7 +481,12 @@ body {
 }
 
 .contact__sns {
+  margin-top: 50px;
+  padding: 0 20px;
   position: relative;
+  @media (min-width: 1100px) {
+    margin-top: 0;
+  }
 }
 
 .rocket {
@@ -502,4 +516,43 @@ body {
 ////////////////////////? FOOTER ?////////////////////////
 .footer {
   background-color: $bgc-footer;
+}
+
+.footer__container {
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 580px;
+
+  @media (min-width: 900px) {
+    max-width: 854px;
+    justify-content: space-between;
+    flex-direction: row;
+  }
+}
+
+.footer__navbar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  a {
+    color: $c-letter-dark;
+    text-decoration: none;
+    font-size: $fz-body;
+    line-height: $lh-paragraph;
+  }
+}
+
+.footer__sponsor {
+  display: flex;
+  justify-content: center;
+  margin-top: 24px;
+  @media (min-width: 900px) {
+    margin-top: 0;
+  }
+  span {
+    font-weight: bold;
+  }
 }
