--- a/css/style.css
+++ b/css/style.css
@@ -525,6 +525,10 @@ table {
   animation-iteration-count: infinite;
 }
 
+* {
+  outline: 1px solid #555;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
@@ -665,6 +669,12 @@ body {
   grid-area: main;
   display: flex;
   justify-content: center;
+  margin-top: 50px;
+}
+@media screen and (min-width: 1100px) and (max-height: 1000px) {
+  .hero__main {
+    margin-top: 150px;
+  }
 }
 
 .hero__version {
@@ -891,6 +901,9 @@ body {
   display: flex;
 }
 
+.main__feature {
+  padding: 0 20px;
+}
 .main__feature h2 {
   font-size: 32px;
   color: #efdab9;
@@ -943,9 +956,11 @@ body {
 
 .contact {
   background-color: #2c2a2b;
+  overflow: hidden;
 }
 
 .contact__container {
+  padding: 100px 0;
   display: grid;
   gap: 50px;
   max-width: 580px;
@@ -957,6 +972,7 @@ body {
 }
 @media (min-width: 1100px) {
   .contact__container {
+    padding: 200px 0;
     grid-template-columns: repeat(2, 1fr);
   }
 }
@@ -967,6 +983,9 @@ body {
   font-weight: 200;
 }
 
+.contact__github {
+  padding: 0 20px;
+}
 .contact__github p {
   color: #efdab9;
   line-height: 1.5;
@@ -977,7 +996,14 @@ body {
 }
 
 .contact__sns {
+  margin-top: 50px;
+  padding: 0 20px;
   position: relative;
+}
+@media (min-width: 1100px) {
+  .contact__sns {
+    margin-top: 0;
+  }
 }
 
 .rocket {
@@ -1005,6 +1031,48 @@ body {
 
 .footer {
   background-color: #efeae1;
+}
+
+.footer__container {
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 580px;
+}
+@media (min-width: 900px) {
+  .footer__container {
+    max-width: 854px;
+    justify-content: space-between;
+    flex-direction: row;
+  }
+}
+
+.footer__navbar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.footer__navbar a {
+  color: #676057;
+  text-decoration: none;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.footer__sponsor {
+  display: flex;
+  justify-content: center;
+  margin-top: 24px;
+}
+@media (min-width: 900px) {
+  .footer__sponsor {
+    margin-top: 0;
+  }
+}
+.footer__sponsor span {
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=style.css.map */
