--- a/css/_structure.scss
+++ b/css/_structure.scss
@@ -2,7 +2,7 @@
 
 ////////////////////////? GENERAL ?////////////////////////
 * {
-  outline: 1px solid #555;
+  // outline: 1px solid #555;
 }
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
